--- a/index.html
+++ b/index.html
@@ -1,26 +1,16 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LA CHATTE - Résultats</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>La Chatte - Résultats</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>🐱 LA CHATTE - Journée <span id="journee-num">1</span></h1>
-    <select id="journee-select">
-      <option value="J1" selected>Journée 1</option>
-      <option value="J2">Journée 2</option>
-      <!-- Ajouter jusqu'à J34 selon besoin -->
-    </select>
-  </header>
-  
-  <main id="matches-container">
-    <!-- Les matchs seront injectés ici -->
-  </main>
+  <h1>Résultats - LA CHATTE</h1>
+  <div id="content">Chargement des données…</div>
 
+  <script src="https://cdn.jsdelivr.net/npm/tabletop@1.6.4/tabletop.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
