--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>Résultats - LA CHATTE</h1>
   <div id="content">Chargement des données…</div>
 
-
+ <script src="https://cdn.jsdelivr.net/npm/tabletop@1.5.4/tabletop.min.js"></script>
   <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tabletop@1.5.4/tabletop.min.js"></script>
 </body>
