--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>La Chatte - Résultats</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>La Chatte - Résultats</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Résultats - LA CHATTE</h1>
-  <div id="content">Chargement des données…</div>
+<h1>Résultats - LA CHATTE</h1>
+<div id="content">Chargement des données…</div>
 
- <script src="https://cdn.jsdelivr.net/npm/tabletop@1.5.4/tabletop.min.js"></script>
-  <script src="script.js"></script>
-   
+<!-- ✅ Charge correctement Tabletop -->
+<script src="https://cdn.jsdelivr.net/npm/tabletop@1.5.4/tabletop.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
